# c-render

./: CMakeLists.txt  README.md  build.sh
include/: fq_matrix.h
include/glad/: glad.h
src/: CMakeLists.txt  glad.c  main.c
