CMAKE_MINIMUM_REQUIRED(VERSION 3.29)

AUX_SOURCE_DIRECTORY(. SRC_LIST)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(/usr/local/include)

FIND_LIBRARY(FQ_MATRIX libfq_matrix.a /usr/local/lib)
FIND_LIBRARY(GLFW libglfw3.a /usr/local/lib)


SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

ADD_EXECUTABLE(C_Render ${SRC_LIST})

TARGET_LINK_LIBRARIES(C_Render ${FQ_MATRIX})
TARGET_LINK_LIBRARIES(C_Render ${GLFW})
